# openMVS

./: .gitignore  BUILD.md  CMakeLists.txt  MvgMvs_Pipeline.py  simplify100k.mlx  simplify300k.mlx
apps/: CMakeLists.txt
apps/DensifyPointCloud/: CMakeLists.txt  DensifyPointCloud.cpp
apps/ReconstructMesh/: ReconstructMesh.cpp
apps/RefineMesh/: RefineMesh.cpp
apps/RefineMeshBs/: CMakeLists.txt  RefineMeshBs.cpp
apps/ReplaceMesh/: CMakeLists.txt  ReplaceMesh.cpp
libs/: CMakeLists.txt
libs/Common/: Types.inl  Util.h
libs/Gipuma/: CMakeLists.txt  GipumaMain.cpp  GipumaMain.h  algorithmparameters.h  camera.h  cameraGeometryUtils.cpp  cameraGeometryUtils.h  cameraparameters.h  config.h  exception.h  fileIoUtils.cpp  fileIoUtils.h  gipuma.cu  gipuma.h  globalstate.h  helper_cuda.h  helper_string.h  imageinfo.h  linestate.h  main.h  managed.h  mathUtils.cpp  mathUtils.h  vector_operations.h
libs/MVS/: CMakeLists.txt  DepthMap.cpp  DepthMap.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  SceneDensify.cpp  SceneReconstruct.cpp  SceneRefine.cpp
